--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>电影推荐</title>
+    <title>Movie Recommend</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but 电影推荐 doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >We're sorry but Movie Recommend doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
